[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Moha-AlHanbali <moha.alhanbali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
flake8 = "^4.0.1"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
